main screen init

--- a/index.html
+++ b/index.html
@@ -4,10 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/f7431cf833.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
-    <aside></aside>
-    <main></main>
+    <aside>
+      <div>
+        <i class="fa-solid fa-user"></i>
+        <i class="fa-solid fa-comment"></i>
+        <i class="fa-solid fa-ellipsis"></i>
+      </div>
+      <div>
+        <i class="fa-solid fa-bell"></i>
+        <i class="fa-solid fa-gear"></i>
+      </div>
+    </aside>
+    <main>
+      <nav>
+        <span>친구</span>
+        <div>
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <i class="fa-solid fa-user-plus"></i>
+        </div>
+      </nav>
+      <div class="friend">
+        <div>
+          <img src="img/profile.jpeg" alt="none" />
+          <span>조민수</span>
+        </div>
+        <div>상태메시지 올리기</div>
+      </div>
+      <section class="section_box">
+        <hr />
+        <div class="friend_header">
+          <span>생일인 친구</span>
+          <i class="fa-solid fa-chevron-up"></i>
+        </div>
+        <div class="friend_box"></div>
+        <div class="friend_box"></div>
+      </section>
+      <section class="section_box">
+        <hr />
+        <div class="friend_header">
+          <span>친구</span>
+          <i class="fa-solid fa-chevron-up"></i>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
