--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Clonning Project number 1 HTML+CSS">
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/f7431cf833.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>KoKoAClone</title>
   </head>
   <body>
     <aside>
       <div>
-        <i class="fa-solid fa-user"></i>
-        <i class="fa-solid fa-comment"></i>
-        <i class="fa-solid fa-ellipsis"></i>
+        <a href="index.html"><i class="fa-solid fa-user"></i></a>
+        <a href="chat.html"><i class="fa-solid fa-comment"></i></a>
+        <a href="setting.html"><i class="fa-solid fa-ellipsis"></i></a>
       </div>
       <div>
         <i class="fa-solid fa-bell"></i>
@@ -33,7 +34,7 @@
       <div class="friend">
         <div>
           <img src="img/profile.jpeg" alt="none" />
-          <span>조민수</span>
+          <span>조이든</span>
         </div>
         <div>상태메시지 올리기</div>
       </div>
@@ -43,8 +44,18 @@
           <span>생일인 친구</span>
           <i class="fa-solid fa-chevron-up"></i>
         </div>
-        <div class="friend_box"></div>
-        <div class="friend_box"></div>
+        <div class="friend_box">
+          <div>
+            <img src="img/1.jpeg" alt="">
+            <span>김아무개</span>
+          </div>
+        </div>
+        <div class="friend_box">
+          <div>
+            <img src="img/2.jpeg" alt="">
+            <span>신아무개</span>
+          </div>
+        </div>
       </section>
       <section class="section_box">
         <hr />
@@ -52,6 +63,49 @@
           <span>친구</span>
           <i class="fa-solid fa-chevron-up"></i>
         </div>
+        <div class="friend_box">
+          <div>
+            <img src="img/3.jpeg" alt="">
+            <span>나아무개</span>
+          </div>
+        </div>
+        <div class="friend_box">
+          <div>
+            <img src="img/4.jpeg" alt="">
+            <span>박아무개</span>
+          </div>
+        </div>
+        <div class="friend_box">
+          <div>
+            <img src="img/5.jpeg" alt="">
+            <span>중아무개</span>
+          </div>
+        </div>
+        <div class="friend_box">
+          <div>
+            <img src="img/6.jpeg" alt="">
+            <span>왕아무개</span>
+          </div>
+        </div>
+        <div class="friend_box">
+          <div>
+            <img src="img/a.jpeg" alt="">
+            <span>대아무개</span>
+          </div>
+        </div>
+        <div class="friend_box">
+          <div>
+            <img src="img/f1.jpg" alt="">
+            <span>심아무개</span>
+          </div>
+        </div>
+        <div class="friend_box">
+          <div>
+            <img src="img/f2.jpg" alt="">
+            <span>거아무개</span>
+          </div>
+        </div>
+
       </section>
     </main>
   </body>
