--- a/chat.html
+++ b/chat.html
@@ -24,14 +24,14 @@
       </div>
     </aside>
     <main id="chat">
-        <nav>
+        <nav id="chat_nav">
             <span>채팅</span>
             <div>
               <i class="fa-solid fa-magnifying-glass"></i>
               <i class="fa-regular fa-comments"></i>
             </div>
           </nav>
-          <section class="section_box">
+          <section class="section_box" id="chat_section">
             <a href="index.html" class="friend_box chat_room">
                 <img src="img/6.jpeg" alt="">
                 <div>
