--- a/setting.html
+++ b/setting.html
@@ -27,6 +27,69 @@
       <nav>
         <span>더보기</span>
       </nav>
+      <section id="setting_profile">
+        <div>
+          <div>
+            <h1>조민수</h1>
+            <span>ethanminsu8969@gmail.com</span>
+          </div>
+          <i class="fa-regular fa-credit-card"></i>
+        </div>
+        <div>
+          <span>My구독</span>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </section>
+      <section id="setting_bottom">
+        <div class="setting_box">
+          <i class="fa-regular fa-envelope"></i>
+          <span>메일</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-regular fa-calendar"></i>
+          <span>캘린더</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-solid fa-desktop"></i>
+          <span>화면</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-solid fa-box"></i>
+          <span>박스</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-regular fa-face-smile"></i>
+          <span>임티</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-regular fa-envelope"></i>
+          <span>메일</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-solid fa-tv"></i>
+          <span>티비</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-solid fa-circle-info"></i>
+          <span>정보</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-solid fa-check"></i>
+          <span>체크</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-solid fa-question"></i>
+          <span>QA</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-regular fa-envelope"></i>
+          <span>메일</span>
+        </div>
+        <div class="setting_box">
+          <i class="fa-solid fa-phone"></i>
+          <span>통화</span>
+        </div>
+      </section>
     </main>
   </body>
 </html>
