--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     ></script>
     <title>KoKoAClone</title>
   </head>
-  <body>
+  <body id="main">
     <aside>
       <div>
         <a href="index.html"><i class="fa-solid fa-user"></i></a>
@@ -105,7 +105,6 @@
             <span>거아무개</span>
           </div>
         </div>
-
       </section>
     </main>
   </body>
