--- a/index.html
+++ b/index.html
@@ -11,101 +11,106 @@
     ></script>
     <title>KoKoAClone</title>
   </head>
-  <body id="main">
-    <aside>
-      <div>
-        <a href="index.html"><i class="fa-solid fa-user"></i></a>
-        <a href="chat.html"><i class="fa-solid fa-comment"></i></a>
-        <a href="setting.html"><i class="fa-solid fa-ellipsis"></i></a>
-      </div>
-      <div>
-        <i class="fa-solid fa-bell"></i>
-        <i class="fa-solid fa-gear"></i>
-      </div>
-    </aside>
-    <main>
-      <nav>
-        <span>친구</span>
+  <body>
+    <div id="main_body">
+      <aside>
         <div>
-          <i class="fa-solid fa-magnifying-glass"></i>
-          <i class="fa-solid fa-user-plus"></i>
+          <a href="index.html"><i class="fa-solid fa-user"></i></a>
+          <a href="chat.html"><i class="fa-solid fa-comment"></i></a>
+          <a href="setting.html"><i class="fa-solid fa-ellipsis"></i></a>
         </div>
-      </nav>
-      <div class="friend">
         <div>
-          <img src="img/profile.jpeg" alt="none" />
-          <span>조이든</span>
+          <i class="fa-solid fa-bell"></i>
+          <i class="fa-solid fa-gear"></i>
         </div>
-        <div>상태메시지 올리기</div>
-      </div>
-      <section class="section_box">
-        <hr />
-        <div class="friend_header">
-          <span>생일인 친구</span>
-          <i class="fa-solid fa-chevron-up"></i>
-        </div>
-        <div class="friend_box">
-          <div>
-            <img src="img/1.jpeg" alt="">
-            <span>김아무개</span>
-          </div>
-        </div>
-        <div class="friend_box">
-          <div>
-            <img src="img/2.jpeg" alt="">
-            <span>신아무개</span>
-          </div>
-        </div>
-      </section>
-      <section class="section_box">
-        <hr />
-        <div class="friend_header">
+      </aside>
+      <main>
+        <nav>
           <span>친구</span>
-          <i class="fa-solid fa-chevron-up"></i>
-        </div>
-        <div class="friend_box">
           <div>
-            <img src="img/3.jpeg" alt="">
-            <span>나아무개</span>
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-user-plus"></i>
           </div>
-        </div>
-        <div class="friend_box">
+        </nav>
+        <div class="friend">
           <div>
-            <img src="img/4.jpeg" alt="">
-            <span>박아무개</span>
+            <img src="img/profile.jpeg" alt="none" />
+            <span>조이든</span>
           </div>
+          <div>상태메시지 올리기</div>
         </div>
-        <div class="friend_box">
-          <div>
-            <img src="img/5.jpeg" alt="">
-            <span>중아무개</span>
+        <section class="section_box">
+          <hr />
+          <div class="friend_header">
+            <span>생일인 친구</span>
+            <i class="fa-solid fa-chevron-up"></i>
           </div>
-        </div>
-        <div class="friend_box">
-          <div>
-            <img src="img/6.jpeg" alt="">
-            <span>왕아무개</span>
+          <div class="friend_box">
+            <div>
+              <img src="img/1.jpeg" alt="">
+              <span>김아무개</span>
+            </div>
           </div>
-        </div>
-        <div class="friend_box">
-          <div>
-            <img src="img/a.jpeg" alt="">
-            <span>대아무개</span>
+          <div class="friend_box">
+            <div>
+              <img src="img/2.jpeg" alt="">
+              <span>신아무개</span>
+            </div>
           </div>
-        </div>
-        <div class="friend_box">
-          <div>
-            <img src="img/f1.jpg" alt="">
-            <span>심아무개</span>
+        </section>
+        <section class="section_box">
+          <hr />
+          <div class="friend_header">
+            <span>친구</span>
+            <i class="fa-solid fa-chevron-up"></i>
           </div>
-        </div>
-        <div class="friend_box">
-          <div>
-            <img src="img/f2.jpg" alt="">
-            <span>거아무개</span>
+          <div class="friend_box">
+            <div>
+              <img src="img/3.jpeg" alt="">
+              <span>나아무개</span>
+            </div>
           </div>
-        </div>
-      </section>
-    </main>
+          <div class="friend_box">
+            <div>
+              <img src="img/4.jpeg" alt="">
+              <span>박아무개</span>
+            </div>
+          </div>
+          <div class="friend_box">
+            <div>
+              <img src="img/5.jpeg" alt="">
+              <span>중아무개</span>
+            </div>
+          </div>
+          <div class="friend_box">
+            <div>
+              <img src="img/6.jpeg" alt="">
+              <span>왕아무개</span>
+            </div>
+          </div>
+          <div class="friend_box">
+            <div>
+              <img src="img/a.jpeg" alt="">
+              <span>대아무개</span>
+            </div>
+          </div>
+          <div class="friend_box">
+            <div>
+              <img src="img/f1.jpg" alt="">
+              <span>심아무개</span>
+            </div>
+          </div>
+          <div class="friend_box">
+            <div>
+              <img src="img/f2.jpg" alt="">
+              <span>거아무개</span>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+    <div id="close">
+      Please minimize your screen to 600px
+    </div>
   </body>
 </html>
