--- a/setting.html
+++ b/setting.html
@@ -12,84 +12,86 @@
     <title>KoKoAClone</title>
   </head>
   <body>
-    <aside>
-      <div>
-        <a href="index.html"><i class="fa-solid fa-user"></i></a>
-        <a href="chat.html"><i class="fa-solid fa-comment"></i></a>
-        <a href="setting.html"><i class="fa-solid fa-ellipsis"></i></a>
-      </div>
-      <div>
-        <i class="fa-solid fa-bell"></i>
-        <i class="fa-solid fa-gear"></i>
-      </div>
-    </aside>
-    <main>
-      <nav>
-        <span>더보기</span>
-      </nav>
-      <section id="setting_profile">
+    <div id="main_body">
+      <aside>
         <div>
+          <a href="index.html"><i class="fa-solid fa-user"></i></a>
+          <a href="chat.html"><i class="fa-solid fa-comment"></i></a>
+          <a href="setting.html"><i class="fa-solid fa-ellipsis"></i></a>
+        </div>
+        <div>
+          <i class="fa-solid fa-bell"></i>
+          <i class="fa-solid fa-gear"></i>
+        </div>
+      </aside>
+      <main>
+        <nav>
+          <span>더보기</span>
+        </nav>
+        <section id="setting_profile">
           <div>
-            <h1>조민수</h1>
-            <span>ethanminsu8969@gmail.com</span>
+            <div>
+              <h1>조민수</h1>
+              <span>ethanminsu8969@gmail.com</span>
+            </div>
+            <i class="fa-regular fa-credit-card"></i>
           </div>
-          <i class="fa-regular fa-credit-card"></i>
-        </div>
-        <div>
-          <span>My구독</span>
-          <i class="fa-solid fa-arrow-right"></i>
-        </div>
-      </section>
-      <section id="setting_bottom">
-        <div class="setting_box">
-          <i class="fa-regular fa-envelope"></i>
-          <span>메일</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-regular fa-calendar"></i>
-          <span>캘린더</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-solid fa-desktop"></i>
-          <span>화면</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-solid fa-box"></i>
-          <span>박스</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-regular fa-face-smile"></i>
-          <span>임티</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-regular fa-envelope"></i>
-          <span>메일</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-solid fa-tv"></i>
-          <span>티비</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-solid fa-circle-info"></i>
-          <span>정보</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-solid fa-check"></i>
-          <span>체크</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-solid fa-question"></i>
-          <span>QA</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-regular fa-envelope"></i>
-          <span>메일</span>
-        </div>
-        <div class="setting_box">
-          <i class="fa-solid fa-phone"></i>
-          <span>통화</span>
-        </div>
-      </section>
-    </main>
+          <div>
+            <span>My구독</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+        </section>
+        <section id="setting_bottom">
+          <div class="setting_box">
+            <i class="fa-regular fa-envelope"></i>
+            <span>메일</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-regular fa-calendar"></i>
+            <span>캘린더</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-solid fa-desktop"></i>
+            <span>화면</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-solid fa-box"></i>
+            <span>박스</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-regular fa-face-smile"></i>
+            <span>임티</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-regular fa-envelope"></i>
+            <span>메일</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-solid fa-tv"></i>
+            <span>티비</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-solid fa-circle-info"></i>
+            <span>정보</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-solid fa-check"></i>
+            <span>체크</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-solid fa-question"></i>
+            <span>QA</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-regular fa-envelope"></i>
+            <span>메일</span>
+          </div>
+          <div class="setting_box">
+            <i class="fa-solid fa-phone"></i>
+            <span>통화</span>
+          </div>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
