--- a/chat.html
+++ b/chat.html
@@ -12,114 +12,116 @@
     <title>KoKoAClone</title>
   </head>
   <body>
-    <aside>
-      <div>
-        <a href="index.html"><i class="fa-solid fa-user"></i></a>
-        <a href="chat.html"><i class="fa-solid fa-comment"></i></a>
-        <a href="setting.html"><i class="fa-solid fa-ellipsis"></i></a>
-      </div>
-      <div>
-        <i class="fa-solid fa-bell"></i>
-        <i class="fa-solid fa-gear"></i>
-      </div>
-    </aside>
-    <main id="chat">
-        <nav id="chat_nav">
-            <span>채팅</span>
+    <div id="main_body">
+        <aside>
             <div>
-              <i class="fa-solid fa-magnifying-glass"></i>
-              <i class="fa-regular fa-comments"></i>
+              <a href="index.html"><i class="fa-solid fa-user"></i></a>
+              <a href="chat.html"><i class="fa-solid fa-comment"></i></a>
+              <a href="setting.html"><i class="fa-solid fa-ellipsis"></i></a>
             </div>
-          </nav>
-          <section class="section_box" id="chat_section">
-            <a href="index.html" class="friend_box chat_room">
-                <img src="img/6.jpeg" alt="">
-                <div>
-                    <h1>대환이형</h1>
-                    <span>빨리 끝내자구 ...</span>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-            <a class="friend_box chat_room">
-                <img src="img/1.jpeg" alt="">
-                <div>
-                    <h1>김아무개</h1>
-                    <span>빨리 끝내자구 ...</span>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-            <a class="friend_box chat_room">
-                <img src="img/2.jpeg" alt="">
-                <div>
-                    <h1>조아무개</h1>
-                    <span>빨리 끝내자구 ...</span>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-            <a class="friend_box chat_room">
-                <img src="img/3.jpeg" alt="">
-                <div>
-                    <h1>심아무개</h1>
-                    <span>빨리 끝내자구 ...</span>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-            <a class="friend_box chat_room">
-                <img src="img/4.jpeg" alt="">
-                <div>
-                    <h1>신아무개</h1>
-                    <span>빨리 끝내자구 ...</span>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-            <a class="friend_box chat_room">
-                <img src="img/5.jpeg" alt="">
-                <div>
-                    <h1>최아무개</h1>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-            <a class="friend_box chat_room">
-                <img src="img/a.jpeg" alt="">
-                <div>
-                    <h1>힘아무개</h1>
-                    <span>빨리 끝내자구 ...</span>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-            <a class="friend_box chat_room">
-                <img src="img/1.jpeg" alt="">
-                <div>
-                    <h1>김아무개</h1>
-                    <span>빨리 끝내자구 ...</span>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-            <a class="friend_box chat_room">
-                <img src="img/2.jpeg" alt="">
-                <div>
-                    <h1>조아무개</h1>
-                    <span>빨리 끝내자구 ...</span>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-            <a class="friend_box chat_room">
-                <img src="img/4.jpeg" alt="">
-                <div>
-                    <h1>신아무개</h1>
-                    <span>빨리 끝내자구 ...</span>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-            <a class="friend_box chat_room">
-                <img src="img/5.jpeg" alt="">
-                <div>
-                    <h1>최아무개</h1>
-                </div>
-                <span>오후 4:30</span>
-            </a>
-          </section>
-          
-    </main>
+            <div>
+              <i class="fa-solid fa-bell"></i>
+              <i class="fa-solid fa-gear"></i>
+            </div>
+          </aside>
+          <main id="chat">
+              <nav id="chat_nav">
+                  <span>채팅</span>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-regular fa-comments"></i>
+                  </div>
+                </nav>
+                <section class="section_box" id="chat_section">
+                  <a href="index.html" class="friend_box chat_room">
+                      <img src="img/6.jpeg" alt="">
+                      <div>
+                          <h1>대환이형</h1>
+                          <span>빨리 끝내자구 ...</span>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                  <a class="friend_box chat_room">
+                      <img src="img/1.jpeg" alt="">
+                      <div>
+                          <h1>김아무개</h1>
+                          <span>빨리 끝내자구 ...</span>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                  <a class="friend_box chat_room">
+                      <img src="img/2.jpeg" alt="">
+                      <div>
+                          <h1>조아무개</h1>
+                          <span>빨리 끝내자구 ...</span>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                  <a class="friend_box chat_room">
+                      <img src="img/3.jpeg" alt="">
+                      <div>
+                          <h1>심아무개</h1>
+                          <span>빨리 끝내자구 ...</span>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                  <a class="friend_box chat_room">
+                      <img src="img/4.jpeg" alt="">
+                      <div>
+                          <h1>신아무개</h1>
+                          <span>빨리 끝내자구 ...</span>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                  <a class="friend_box chat_room">
+                      <img src="img/5.jpeg" alt="">
+                      <div>
+                          <h1>최아무개</h1>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                  <a class="friend_box chat_room">
+                      <img src="img/a.jpeg" alt="">
+                      <div>
+                          <h1>힘아무개</h1>
+                          <span>빨리 끝내자구 ...</span>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                  <a class="friend_box chat_room">
+                      <img src="img/1.jpeg" alt="">
+                      <div>
+                          <h1>김아무개</h1>
+                          <span>빨리 끝내자구 ...</span>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                  <a class="friend_box chat_room">
+                      <img src="img/2.jpeg" alt="">
+                      <div>
+                          <h1>조아무개</h1>
+                          <span>빨리 끝내자구 ...</span>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                  <a class="friend_box chat_room">
+                      <img src="img/4.jpeg" alt="">
+                      <div>
+                          <h1>신아무개</h1>
+                          <span>빨리 끝내자구 ...</span>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                  <a class="friend_box chat_room">
+                      <img src="img/5.jpeg" alt="">
+                      <div>
+                          <h1>최아무개</h1>
+                      </div>
+                      <span>오후 4:30</span>
+                  </a>
+                </section>
+                
+          </main>
+    </div>
   </body>
 </html>
